--- a/style.css
+++ b/style.css
@@ -276,5 +276,14 @@ body {
 }
 
 
+.age{
+  margin-top: 10px;
+    font-size: 12px;
+    font-weight: light ;
+    text-align: justify;
+    align-items: left;
+  
+  
+}
 
 
